--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -2,4 +2,6 @@
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
-  host: ps-pal-tracker-review-sid
+  host: ps-pal-tracker-review
+  services:
+  - tracker-database
