--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -3,3 +3,5 @@ applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
   host: ps-pal-tracker-sid
+  env:
+      SECURITY_FORCE_HTTPS:true
